--- a/index.html
+++ b/index.html
@@ -58,11 +58,18 @@
 
     <article id="quest">
 
-        <p id="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, esse eum explicabo fuga, itaque magni possimus quam quia quis repellendus sequi ut, veniam? Dignissimos error excepturi labore magnam vero voluptatum?</p>
+        <p id="text"></p>
 
         <input type="number" id="answer-input">
 
         <button id="hint-btn">Подсказка</button>
+
+    </article>
+
+
+    <article id="game-over">
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, esse eum explicabo fuga, itaque magni possimus quam quia quis repellendus sequi ut, veniam? Dignissimos error excepturi labore magnam vero voluptatum?</p>
 
     </article>
 
