--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </button>
     </article>
 
-    <article id="welcome">
+    <article id="welcome" class="preload-background">
 
         <div id="welcome-text" class="appearing">
             <p>
