--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <button id="next-quest-btn" class="show">К следующему заданию!</button>
     </article>
 
-    <article id="quest">
+    <article id="quest" class="preload-background">
 
         <p id="text"></p>
 
@@ -69,7 +69,7 @@
 
     <article id="game-over">
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, esse eum explicabo fuga, itaque magni possimus quam quia quis repellendus sequi ut, veniam? Dignissimos error excepturi labore magnam vero voluptatum?</p>
+        <p>Ну вот и закончилось мое поздравление. Надеюсь тебе понравился подарок. Целую, обнимаю и люблю тебя, Сладкая!</p>
 
     </article>
 
