--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <article id="game-over">
 
-        <p>Ну вот и закончилось мое поздравление. Надеюсь тебе понравился подарок. Целую, обнимаю и люблю тебя, Сладкая!</p>
+        <p>Все конец! :)</p>
 
     </article>
 
