--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
 
     <article id="game-over">
 
-        <p>Все конец! :)</p>
+        <p class="title">Результаты</p>
+
+        <p>Время прохождения: <span id="result-time">00:00</span></p>
+        <p>Использовано подсказок: <span id="hint-amount">0</span></p>
 
     </article>
 
